--- a/index.html
+++ b/index.html
@@ -8,17 +8,25 @@
     <script src="scripts.js" defer></script>
 </head>
 <body>
-    <div class="menu">
-        <button class="menu-button" onclick="toggleMenu()">Páginas</button>
-        <div class="menu-content">
-            <button onclick="location.href='musica.html'">Ver Letra</button>
-            <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
-            <button onclick="location.href='password.html'">segredo</button>
-                        <button onclick="location.href='jogos.html'">Jogos</button>
-            <button onclick="location.href='Central.html'">Biblioteca</button>
-                        <button onclick="location.href='atualizacao.html'">Atualização</button>
+    <!-- Barra de Navegação -->
+    <nav class="navbar">
+        <div class="logo">
+            <a href="index.html">MeuSite</a>
         </div>
-    </div>
+        <ul class="nav-links">
+            <li><a href="index.html">Início</a></li>
+            <li><a href="lyrics.html">Letra</a></li>
+            <li><a href="password.html">Imagens</a></li>
+            <li><a href="https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa">Spotify</a></li>
+        </ul>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </nav>
+
+    <!-- Conteúdo Principal -->
     <div class="container">
         <div class="message">
             <p>Esse site vai ser vitalício.</p>
