--- a/images.html
+++ b/images.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registros</title>
+    <title>Página Principal</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js" defer></script>
 </head>
 <body>
+    <!-- Barra de Navegação -->
+    <nav class="navbar">
+        <div class="logo">
+            <a href="images.html">Shhh</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html">Início</a></li>
+            <li><a href="Central.html">Biblioteca</a></li>
+            <li><a href="musica.html">Letra</a></li>
+            <li><a href="password.html">Imagens</a></li>
+            <li><a href="https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa">Spotify</a></li>
+            <li><a href="jogos.html">Jogos</a></li>
+        </ul>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </nav>
     <div class="menu">
         <div class="menu-button" onclick="toggleMenu()">------Páginas------</div>
         <div class="menu-content">
