--- a/images.html
+++ b/images.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <title>Shhh</title>
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
 </head>
@@ -27,15 +27,6 @@
             <span></span>
         </div>
     </nav>
-    <div class="menu">
-        <div class="menu-button" onclick="toggleMenu()">------Páginas------</div>
-        <div class="menu-content">
-            <button onclick="location.href='musica.html'">Ver Letra</button>
-            <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
-            <button onclick="location.href='password.html'">segredo</button>
-            <button onclick="location.href='Central.html'">Biblioteca</button>
-            <button onclick="location.href='index.html'">inicio</button>
-        </div>   
     <div class="container">
         <img src="images/kkkkkkkkkkkkkkk.jpg" class="center">
         <img src="images/20240608_201707.jpg" class="center">
