--- a/jogos.html
+++ b/jogos.html
@@ -3,19 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Central</title>
+    <title>Jogos</title>
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
 </head>
 <body>
-    <div class="menu">
-        <button class="menu-button" onclick="toggleMenu()">Páginas</button>
-        <div class="menu-content">
-            <button onclick="location.href='musica.html'">Ver Letra</button>
-            <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
-            <button onclick="location.href='password.html'">segredo</button> 
-            <button onclick="location.href='index.html'">inicio</button>
-        </div>   
+    <!-- Barra de Navegação -->
+    <nav class="navbar">
+        <div class="logo">
+            <a href="jogos.html">Jogos</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html">Início</a></li>
+            <li><a href="Central.html">Biblioteca</a></li>
+            <li><a href="musica.html">Letra</a></li>
+            <li><a href="password.html">Imagens</a></li>
+            <li><a href="https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa">Spotify</a></li>
+            <li><a href="jogos.html">Jogos</a></li>
+        </ul>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </nav>
     <div class="container">
         <div class="message">
             <p>Aqui você pode achar todos os jogos que eu fiz pra ti :)</p>
