--- a/Central.html
+++ b/Central.html
@@ -50,6 +50,7 @@
         <button onclick="location.href='13082024.html'">13/08/2024</button>
         <button onclick="location.href='16082024.html'">16/08/2024</button>
         <button onclick="location.href='26082024.html'">26/08/2024</button>
+        <button onclick="location.href='28082024.html'">28/08/2024</button>
     </div>
 </body>
 </html>
