--- a/filme8.html
+++ b/filme8.html
@@ -30,7 +30,7 @@
 <!--VÍDEO PARA SER ASSISTIDO-->
 
     <section class="filme">
-        <video src="vid/lv_0_20240908001910.mp4.mp4" controls="controls" autoplay="autoplay" class="filme5"></video>
+        <video src="vid/lv_0_20240908001910.mp4" controls="controls" autoplay="autoplay" class="filme5"></video>
     </section>
 
 <!--RODAPE-->
