--- a/images.html
+++ b/images.html
@@ -36,8 +36,9 @@
         <img src="images/vestido 2.jpg" class="center">
         <img src="images/Vestido 3.jpg" class="center"> 
         <img src="images/Vestido 4.jpg" class="center">
-        <img src="images/Hihihi.jpg" class="center">
-        <img src="images/VideoCapture_20240908-140943.jpg" class="center">
+        <img src="images/20240911_110015.jpg" class="center">
+        <img src="images/20240910_120248.jpg" class="center">
+        <img src="images/20240910_115956.jpg" class="center">
         <button onclick="location.href='14082024.html'">14/08/2024</button>
         <!-- Adicione mais imagens conforme necessário -->
     </div>
