--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <p>Muito.</p>
             <p>Tá bem simples, mas com o tempo vai ficando melhor e vou adicionando mais coisas, mais abas, deixando mais bonito e etc.</p>
             <p>Bom, é o tipo de coisa que eu gostaria de poder te falar pessoalmente, mas como não é o caso, Eu te amo demais e eu espero com todo o meu coração que você se sinta amada por mim, e se não se sentir, que em algum momento isso aconteça e que eu consiga te proporcionar muitos momentos felizes.</p>
+<p>Não foi suficiente. Terminamos 20/09/2024. 4 meses sem você.</p>
             <p>Agora pode ficar "a vontade" nesse projeto q se Deus quiser não vai acabar nunca.</p>
         </div>
                         <button onclick="location.href='Amor.html'">💙</button>
